--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "prettier": "^2.7.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
   }
 }
